--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "discord-api-types": "^0.33.0",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
-    "ms": "^2.1.3"
+    "ms": "^2.1.3",
+    "mysql": "^2.18.1"
   }
 }
