--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "discord-api-types": "^0.33.0",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
+    "log4js": "^6.5.0",
     "ms": "^2.1.3",
     "sqlite3": "^5.0.8"
   }
