--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   "dependencies": {
     "@discordjs/builders": "^0.13.0",
     "@discordjs/rest": "^0.4.1",
+    "colors": "^1.4.0",
     "discord-api-types": "^0.33.0",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
-    "log4js": "^6.5.0",
+    "moment": "^2.29.3",
     "ms": "^2.1.3",
     "sqlite3": "^5.0.8"
   }
