--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@discordjs/builders": "^0.13.0",
     "@discordjs/rest": "^0.4.1",
     "@memw/betterconsole": "^1.1.1",
+    "axios": "^0.27.2",
     "colors": "^1.4.0",
     "discord-api-types": "^0.33.0",
     "discord.js": "^13.7.0",
