--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A discord bot to worship jamie",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node -r dotenv/config sharding.js"
   },
@@ -21,7 +22,7 @@
   "homepage": "https://github.com/stifskere/Jamie-worship#readme",
   "dependencies": {
     "@discordjs/rest": "^0.4.1",
-    "@memw/betterconsole": "^1.1.1",
+    "@memw/betterconsole": "^1.5.0",
     "axios": "^0.27.2",
     "colors": "^1.4.0",
     "discord-api-types": "^0.33.0",
